# University-Record-Management-System

./: .gitignore  CMakeLists.txt  Driver.cpp  Employee.cpp  Employee.h  README.md  staff.txt  student.txt  test.cpp
data/: staff.txt  student.txt
src/: Driver.cpp  Employee.cpp  Employee.h
